# capstone-demo

./: LICENSE  README.md  build.sh  startup.sh
backend/: .env.sample  main.py  pyproject.toml  requirements.txt
backend/migrations/: env.py
backend/migrations/versions/: 6ada86d0d9a8_update_users_tables.py  cbc572cba83f_create_users_and_conversations_tables.py  dd5b1d977288_add_session_tables.py
backend/modules/: ai.py  authenticate.py  db.py  env.py  models.py  res_models.py
backend/prompts/: background_search.py  conversation_agent.py  information_gatherer.py  question_generator.py  search.py  validator.py
backend/test/: conftest.py  test_auth_routes.py  test_llm_routes.py
frontend/: package-lock.json  package.json
frontend/.react-router/types/: +routes.ts
frontend/.react-router/types/app/routes/+types/: _auth.login.ts  _auth.register.ts
frontend/app/: app.css  root.tsx  routes.ts
frontend/app/routes/: _auth.login.tsx  _auth.register.tsx  _auth.tsx  _index.tsx
